// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="display: flex; align-items: center; margin: 5px 0px; padding: 10px; border: 1px solid #ccc; border-radius: 5px;"
  >
    <li
      style="flex: 1; margin: 0px; list-style: none;"
    >
      default todo
    </li>
    <button
      style="margin: 0px 5px; padding: 5px 10px; background-color: rgb(40, 167, 69); color: white; border-radius: 3px; cursor: pointer;"
    >
      Edit
    </button>
    <button
      style="padding: 5px 10px; background-color: rgb(220, 53, 69); color: white; border-radius: 3px; cursor: pointer;"
    >
      X
    </button>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when editing 1`] = `
<DocumentFragment>
  <div
    style="display: flex; align-items: center; margin: 5px 0px; padding: 10px; border: 1px solid #ccc; border-radius: 5px;"
  >
    <form
      style="display: flex; flex: 1; align-items: center;"
    >
      <input
        style="flex: 1; padding: 5px; margin-right: 10px;"
        type="text"
        value="default todo"
      />
      <button
        style="padding: 5px 10px; background-color: rgb(0, 123, 255); color: white; border-radius: 3px; cursor: pointer;"
        type="submit"
      >
        Update!
      </button>
    </form>
  </div>
</DocumentFragment>
`;
